# ruse

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: ruse_deps.cmake
ruse/: CMakeLists.txt  config.hpp.in  protocol_traits.hpp  reflection_macros.hpp  ruse.hpp  show.hpp
ruse/experimental/: character_class.hpp  character_range.hpp  grammar.hpp  lambda_calculus.hpp  lexer.hpp  methods.hpp  reader.hpp  record.hpp  rough.hpp  state.hpp
ruse/reference/: base_types.hpp  functional.hpp  hoisted.hpp  homogeneous_vector.hpp  import.hpp  list.hpp  monoid.hpp  nat.hpp  nothing.hpp  pair.hpp  parser.hpp  property_vector.hpp  protocol.hpp  pure.hpp  reader.hpp  reflection.hpp  singleton.hpp  state.hpp  string.hpp  tag.hpp  template.hpp  tuple.hpp  type.hpp  utility.hpp  value_wrapper.hpp  vector.hpp
ruse_testing/: CMakeLists.txt  character_class_test.cpp  character_range_test.cpp  grammar_test.cpp  hoisted_test.cpp  lambda_calculus_test.cpp  lexer_test.cpp  list_test.cpp  methods_test.cpp  monoid_test.cpp  nat_test.cpp  nothing_test.cpp  pair_test.cpp  parser_test.cpp  property_vector_test.cpp  pure_test.cpp  reader_test.cpp  record_test.cpp  reflection_test.cpp  rough_experiments_test.cpp  show_test.cpp  singleton_test.cpp  state_test.cpp  string_test.cpp  tag_test.cpp  template_test.cpp  test_macros.hpp  test_template.cpp  tuple_test.cpp  type_test.cpp  utility_test.cpp  vector_test.cpp
scripts/: check-format.sh
